--- a/LaTeX Workshop/workshop_presentation.tex
+++ b/LaTeX Workshop/workshop_presentation.tex
@@ -62,12 +62,29 @@ Leslie Lamport developed a standardized version called \LaTeX\ to incorporate \T
     \item Tables \hfill \textbf{Challenge:} Create Table.
     \item Diagrams \hfill \textbf{Challenge:} Create Diagram.
      \item Algorithms \hfill \textbf{Challenge:} Create Algorithm.
-    \item Advanced LaTex (Macros) \hfill \textbf{Challenge:} Create Macro.
+    \item Advanced LaTex
     \item LaTex Ecosystem: Presentations, Posters, Thesis, Templates, Bibliographies, Other Packages.
 \end{enumerate}
 \vfill
 \textbf{Competition}
-We will provide a document with all of the elements above and your challenge will be to recreate the document in \LaTeX.
+We will provide documents with all of the elements above and your challenge will be to recreate the document in \LaTeX.
+\end{frame}
+\begin{frame}
+\frametitle{If you are bored...}
+\url{https://texnique.xyz/}
+\end{frame}
+\begin{frame}
+\frametitle{Project files}
+\vfill
+Project files are available here
+\begin{figure}
+    \centering
+    \includegraphics[width=0.25\linewidth]{images/qr.png}
+    \caption{Caption}
+    \label{fig:enter-label}
+\end{figure}
+
+\url{https://tinyurl.com/dal-latex}
 \end{frame}
 \begin{frame}[fragile]
 \frametitle{Basics of Typesetting: The Environment}
@@ -76,7 +93,6 @@ Go to \url{https://overleaf.com/} \\
 (1) create an account (if need be) \\
 (2) create a new project (blank document)
 \end{block}
-
 \begin{verbatim}
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
@@ -90,6 +106,7 @@ Go to \url{https://overleaf.com/} \\
 \end{verbatim}
 
 \end{frame}
+
 \begin{frame}[fragile]
 \frametitle{Basics of Typesetting: The Document}
 \verb|\documentclass{article}| creates the class of document that gives a whole host of styling and commands specific to that document.
@@ -103,7 +120,7 @@ Here is a basic document structure hierarchy you will use a lot:
 \begin{verbatim}
 \section{section header}
 .. some text
-\subsection{another header}]
+\subsection{another header}
 \subsubsection{another}
 \paragraph{This para starts like this}
 \subparagraph{Subpara start}
@@ -121,6 +138,12 @@ You tag most things with \verb|\label{yourlabel}| and reference them with \verb|
 For example this slide is labeled as Slide~\ref{slideref}. In \TeX this looks like:
 \begin{verbatim}
 Slide~\ref{slideref} % tilde means stay on same line
+\end{verbatim} \\ 
+\textbf{Pro Tip: Use Clever Ref}
+\begin{verbatim}
+\usepackage{cref}
+\cref{sec:results} % section 2
+\Cref{app:datasets-used} % Appendix A
 \end{verbatim}
 
 \end{frame}
@@ -153,7 +176,7 @@ Another common element used to structure text is the \verb|\begin{itemize/enumer
 \vspace{1em} \hspace{1em} % adds space
 \vspace{-1em} \hspace{-1em} % removes space
 \quad % adds 4 spaces
-\& % \ escapes &
+\& \_ % \ escapes & or _
 \noindent % makes sure there is no indent.
 \end{verbatim}
 \end{frame}
@@ -170,7 +193,7 @@ Another common element used to structure text is the \verb|\begin{itemize/enumer
 {\tiny Tiny}  \verb|{\tiny this text is small}| \\
 \texttt{Monospace Code} \verb|{\texttt{Llama2-7B}}| \\
 \textsc{Small Caps} \verb|\textsc{Small Caps}| \\
-\textcolor{red}{color} \verb|\textcolor{red}{color}| (Requires \verb|\usepackage{xcolor}|)
+\textcolor{red}{color} \verb|\textcolor{red}{color}| \\ (Requires \verb|\usepackage{xcolor}|)
 \end{frame}
 \begin{frame}[fragile]
 \frametitle{Basics of Typesetting: Figures}
@@ -198,9 +221,8 @@ If we add the package \verb|\usepackage{graphicx}|, then we can include pictures
 
 Recreate the following PDF using what we learned so far. \\
 Note: \verb|\TeX{}| and \verb|\LaTeX{}| are the verbs for the outputs \TeX{} and \LaTeX{}. \\
-QR Code: \\
-Github Link: \\
-\url{challenges/challenge_1_document}
+Challenge PDF: challenge\_1\_document.pdf \\
+Github Link:  \url{https://tinyurl.com/dal-latex-challenge-1} 
 
 \end{frame}
 
@@ -304,18 +326,18 @@ When you can you should use standard math environments.
 
 % \underset{\theta}{argmin} \: \mathcal{L} 
 
-Hint: make sure to use 
+Make sure to use 
 \begin{verbatim}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \end{verbatim}
 \vfill
-There is also the use of some symbols and verbs (like \verb|\underset{}{}|) that you will need to look up.
+There is also the use of some symbols and verbs (like \verb|\underset{}{}|) that you will need to look up or ask.
 \vfill
 Spacing tips: you can use \verb|\quad| or \verb|\| or \verb|\:|  to adjust spacing.
-
-QR Code: \\
-Github Link: \\
+Github Link: \url{https://tinyurl.com/dal-latex-challenge-2}
+\vfill
+\textbf{Remember to use:} \url{ https://detexify.kirelabs.org/}
 \vfill
 If you are finished keep going at: \url{https://texnique.xyz/}
 
@@ -396,8 +418,7 @@ Some basic commands:
 \begin{frame}
 \frametitle{Algorithms Recreation Minichallenge}
 
-% Github Link:
-challenges/challenge\_3\_algorithms
+Link: \urk{https://tinyurl.com/dal-latex-challenge-3}
 
 
 \end{frame}
@@ -536,8 +557,7 @@ latex_table = pivot.to_latex(
 \begin{frame}[fragile]
 \frametitle{Table Recreation Minichallenge}
 
-challenge\_4\_tables
-
+Link: \url{https://tinyurl.com/dal-latex-challenge-4}
 
 
 \end{frame}
@@ -603,7 +623,7 @@ and +(right:7mm) .. (lowercircle.east);
 \begin{frame}
 \frametitle{Diagram Recreation Minichallenge}
 
-challenge\_5\_diagrams
+\url{https://tinyurl.com/dal-latex-challenge-5}
 
 \end{frame}
 
@@ -705,7 +725,7 @@ Why shouldn't I just use matplotlib?
 
 \frametitle{Plot Recreation Minichallenge}
 
-challenge\_6\_plots
+Link: \url{https://tinyurl.com/dal-latex-challenge-6} \\
 
 \textbf{See:} \url{https://latexdraw.com/} for comprehensive tutorials on latex plotting and diagramming.
 
@@ -716,11 +736,14 @@ challenge\_6\_plots
 
 \begin{itemize}
     \item Presentations (like this one): Beamer
-    \item Posers: Beamerposter
+    \item Posers: Beamerposter 
     \item Other documents: overleaf temapltes
     \item Bibliography management: Bibtex, Natbib, Biblatex
     \item Other Packages: \TeX{} Packages
 \end{itemize}
+
+
+\textbf{Dal Specific:} There is a Dal poster template on overleaf (if you search), I made a Dal presentation template (ask me), Vlado and Mike maintain the thesis template: \url{https://web.cs.dal.ca/~vlado/dalcsthesis/}. There are other things (RAD templates) others have maintained.
 
 \end{frame}
 
@@ -756,6 +779,24 @@ Our results differ (see \citealp{})...
 \end{frame}
 
 \begin{frame}[fragile]
+\frametitle{Citation Styles}
+
+\textbf{There are various citation}: packages like bibtex, biblatex, natbib
+\vfill
+You will need to be careful when setting the bibliography, bibliography style, citations, and bibtex entries.
+\vfill
+\textbf{Bibtex Entries}
+\url{https://www.bibtex.com/e/entry-types/} \\
+Common mistake: using @misc when @article is available.
+\vfill
+\textbf{When to use citep/citet/citealp/cite}
+If your citation style supports it you should use \verb|\citep| when its a parenthesis citation and you are not directly referring to the citation as a noun. If you using the citation as a noun, use \verb|citet|. Avoid extra parenthesis in a parenthesis by using \verb|\citealp|.
+\vfill
+Do not refer to a \verb|\cite| directly. ``[1] shows blah.'' Instead say "Lou et al. [1] shows blah.
+
+\end{frame}
+
+\begin{frame}[fragile]
 \frametitle{Advanced \LaTeX}
 
 \begin{itemize}
@@ -766,9 +807,9 @@ Our results differ (see \citealp{})...
 \end{itemize}
 
 \begin{verbatim}
-\newcommand{\R}{\mathbb{R}} \\
-\newcommand{\bb}[1] \\{\mathbb{#1}}
-\( \bb{R} \) \\ 
+\newcommand{\R}{\mathbb{R}} 
+\newcommand{\bb}[1] {\mathbb{#1}}
+\( \bb{R} \) 
 \end{verbatim}
 
 \end{frame}
@@ -783,7 +824,7 @@ Our results differ (see \citealp{})...
     \item \url{https://www.youtube.com/@DrTrefor}
     \item Looking at the source of arXiv papers
     \item \url{https://texnique.xyz/}
-    \item Michelle Krummel Latex
+    \item Michelle Krummel Latex Youtube
     \item Me / Other Grad students at Dal
     \item \url{https://www.learnlatex.org/en/}
 \end{enumerate}
@@ -792,15 +833,25 @@ Our results differ (see \citealp{})...
 \begin{frame}
 \frametitle{Competition}
 
-Paper recreation challenge.
+Paper recreation challenge (1 hour)
 \vfill
 \begin{enumerate}
-    \item Choose a paper from the TinyPapers track from ICRL: \url{https://openreview.net/group?id=ICLR.cc/2024/TinyPapers#tab-invite-to-present-notable}
-    \item Create a new overleaf project using the ICLR template \url{https://iclr.cc/Conferences/2024/CallForPapers}
+    \item Choose a paper from the TinyPapers track from ICRL: \url{https://tinyurl.com/dal-latex-tiny-papers}
+    \item Create a new overleaf project using the ICLR template \url{https://tinyurl.com/dal-latex-iclr-template}
     \item Fill it in copying the paper as best you can.
 \end{enumerate}
 \vfill
-\textbf{The most faithful recreation wins!}
+\textbf{The most faithful and challenging recreation wins! Judged by Frank and I}
+\vfill
+\textbf{Submit to domenic.rosati@dal.ca}
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Competition}
+
+The most faithful and challenging recreation wins!
 \vfill
 What is allowed?
 \begin{itemize}
@@ -812,13 +863,16 @@ What is allowed?
 What is not allowed?
 \begin{itemize}
 \item Finding the TeX source of the paper
-\item Taking screenshots of tables
+\item Taking screenshots of tables (they should be tables)
 \end{itemize}
 \vfill
 \textbf{Ask for help!}
-
+\vfill
+\textbf{Finished?}
+\url{https://texnique.xyz/}
 
 \end{frame}
+
 
 
 \begin{frame}
